test/parser/prs/inv-11.stderr
At: "inv-11.hac":5:
parse error: syntax error
parser stacks:
state	value
#STATE#	(null) 
#STATE#	(process-prototype) [3:1..22]
#STATE#	{ [3:24]
#STATE#	keyword: prs [4:1..3]
#STATE#	(null) 
#STATE#	{ [4:5]
#STATE#	~ [5:2]
#STATE#	~ [5:3]
in state #STATE#, possible rules are:
	prs_not : '~' . prs_unary_expr  (#RULE#)
	prs_internal_optional : .  (#RULE#)
acceptable tokens are: 
	'(' (shift)
	'@' (shift)
	ID (reduce)
